# CSE180robotics

./: .gitattributes  README.md  finalprojectsetupscript.sh  lab5setupscript.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/husky_msgs/: HuskyStatus.h
devel/include/logical_camera_plugin/: logicalImage.h
devel/lib/husky_base/: husky_node
devel/lib/labpkg/: detectdivergence  gotopose  gotoposetimeout  listener  repeat  saferandomwalk  uncertainty
devel/lib/pkgconfig/: husky_base.pc  husky_bringup.pc  husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_viz.pc  labpkg.pc  logical_camera_plugin.pc  random.pc
devel/lib/random/: random
devel/share/husky_base/cmake/: husky_baseConfig.cmake
devel/share/husky_bringup/cmake/: husky_bringupConfig.cmake
devel/share/husky_control/cmake/: husky_controlConfig.cmake
devel/share/husky_description/cmake/: husky_descriptionConfig.cmake
devel/share/husky_gazebo/cmake/: husky_gazeboConfig.cmake
devel/share/husky_msgs/cmake/: husky_msgs-msg-paths.cmake  husky_msgsConfig.cmake
src/: finalfiles.tgz  lab5.tgz
src/labpkg/: CMakeLists.txt  lab1.launch
src/labpkg/src/: detectdivergence.cpp  getlaser.cpp  gotopose.cpp  gotoposetimeout.cpp  listener.cpp  receivetime.cpp  repeat.cpp  saferandomwalk.cpp  sendtime.cpp  square.cpp  tfbroadcaster.cpp  uncertainty.cpp
src/random/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/random/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/random/src/: random.cpp  random.cpp~
(+12 files in other folders)
